environments/dev/monitoring/kube-prometheus-grafana/prometheus-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - prometheus.dev.curieo.ai
    port:
      name: http
      number: 80
      protocol: HTTP
