environments/dev/monitoring/kube-prometheus-grafana/alertmanager-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alertmanager-virtualservice
  namespace: monitoring
spec:
  gateways:
  - alertmanager-gateway
  hosts:
  - alertmanager.dev.curieo.ai
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local
        port:
          number: 9093
