environments/dev/monitoring/kube-prometheus-grafana/grafana-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: monitoring
spec:
  gateways:
  - grafana-gateway
  hosts:
  - grafana.dev.curieo.org
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
